--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nx-apollo-react-example",
-  "type": "module",
+  "name": "gwc-walmart-challenge",
+
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -35,6 +35,7 @@
     "@nestjs/graphql": "^8.0.2",
     "@nestjs/platform-express": "^8.0.5",
     "apollo-boost": "^0.4.9",
+    "apollo-server-core": "^3.1.1",
     "apollo-server-express": "^3.1.1",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
@@ -70,6 +71,7 @@
     "@types/node": "^16.4.10",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.28.5",
     "@typescript-eslint/parser": "^4.28.5",
     "cypress": "^8.1.0",
