--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "gwc-walmart-challenge",
-
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -29,26 +28,33 @@
   },
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^4.0.0",
+    "@apollo/client": "^3.4.5",
     "@nestjs/common": "^8.0.5",
     "@nestjs/core": "^8.0.5",
     "@nestjs/graphql": "^8.0.2",
     "@nestjs/platform-express": "^8.0.5",
     "apollo-boost": "^0.4.9",
     "apollo-server-core": "^3.1.1",
-    "apollo-server-express": "^3.1.1",
+    "apollo-server-express": "^2.25.2",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
     "document-register-element": "^1.14.10",
     "graphql": "^15.5.1",
     "graphql-tools": "^8.0.0",
+    "i": "^0.3.6",
     "nestjs": "0.0.1",
-    "react": "17.0.2",
-    "react-bootstrap": "^1.6.1",
+    "npm": "^7.20.3",
+    "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-bootstrap-icons": "^1.5.0",
+    "react-date-and-time-picker": "^1.3.7",
+    "react-datetime-picker": "^3.3.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "reflect-metadata": "^0.1.13"
+    "react-slick": "^0.28.1",
+    "reflect-metadata": "^0.1.13",
+    "slick-carousel": "^1.8.1",
+    "ts-morph": "^11.0.3"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
