--- a/apps/api/src/assets/.graphqlconfig
+++ b/apps/api/src/assets/.graphqlconfig
@@ -4,7 +4,7 @@
   "extensions": {
     "endpoints": {
       "Default GraphQL Endpoint": {
-        "url": "http://localhost:3333/graphql",
+        "url": "https://gwc-walmart-challenge.vercel.app/graphql",
         "headers": {
           "user-agent": "JS GraphQL",
         },
