--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "nx": "nx",
     "serve": "nx serve",
     "start": "nx run-many --target=serve --projects=api,web-app --parallel",
-    "build": "nx build",
+    "build": "nx api:build web-app:build",
     "build-gql-typing": "ts-node tools/generate-typings",
     "test": "nx test",
     "lint": "nx workspace-lint && nx lint",
@@ -36,6 +36,7 @@
     "apollo-boost": "^0.4.9",
     "apollo-server-core": "^3.1.1",
     "apollo-server-express": "^2.25.2",
+    "apollo-server-micro": "^2.25.2",
     "bootstrap": "^5.0.2",
     "bootstrap-icons": "^1.5.0",
     "document-register-element": "^1.14.10",
